Adds basic structure for ui files, with empty templates

--- a/lib/portlet_generator/templates/liferay-portlet-entry.xml.erb
+++ b/lib/portlet_generator/templates/liferay-portlet-entry.xml.erb
@@ -2,10 +2,10 @@
     <portlet-name><%= @portlet.id %></portlet-name>
     <icon>/templates/<%= @portlet.name %>/icon.png</icon>
     <header-portlet-css>
-      /templates/<%= @portlet.name %>/main.css
+      /templates/<%= @portlet.name %>/css/main.css
     </header-portlet-css>
     <footer-portlet-javascript>
-      /templates/<%= @portlet.name %>/main.js
+      /templates/<%= @portlet.name %>/js/main.js
     </footer-portlet-javascript>
     <css-class-wrapper>
       <%= @portlet.id %>-portlet
