Remove leading crescendo-ui in portlet-entry.xml.erb

--- a/lib/portlet_generator/templates/portlet-entry.xml.erb
+++ b/lib/portlet_generator/templates/portlet-entry.xml.erb
@@ -4,7 +4,7 @@
     <portlet-class>org.springframework.web.portlet.DispatcherPortlet</portlet-class>
     <init-param>
       <name>contextConfigLocation</name>
-      <value>/WEB-INF/crescendo-ui-<%= @portlet.id %>-portlet.xml</value>
+      <value>/WEB-INF/<%= @portlet.id %>-portlet.xml</value>
     </init-param>
     <expiration-cache>0</expiration-cache>
     <supports>
